Fix netlify redirection

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,7 @@ GO_VERSION = "1.22.2"
 
 [context.production]
 command = "npm run build:production"
+
+[[redirects]]
+  from = "/en/news.rss"
+  to = "/en/blog/index.xml"
