Add legal notices

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -104,7 +104,7 @@ params:
     # set taxonomyPageHeader = [] to hide taxonomies on the page headers
     taxonomyPageHeader: []
 
-  privacy_policy:
+  privacy_policy: /fr/mentions-legales/
 
   # First one is picked as the Twitter card image if not set on page.
   # images: [images/project-illustration.png]
