--- a/hugo.yaml
+++ b/hugo.yaml
@@ -191,7 +191,7 @@ params:
         url: mailto:helpdesk@wallabag.it
         icon: fa fa-envelope
         desc: Any question? Contact us!
-      - name: Twitter
+      - name: Mastodon
         url: https://fosstodon.org/@wallabag
         icon: fab fa-mastodon
         desc: Follow us on Mastodon to get the latest news.
