--- a/hugo.yaml
+++ b/hugo.yaml
@@ -29,6 +29,10 @@ menu:
     - name: Pricing
       weight: 25
       url: /en/#pricing
+    - name: Knowledge base
+      weight: 26
+      url: 'https://wallabag-it.zammad.com/help/en-gb'
+
 
 # You can add your own taxonomies
 #taxonomies:
@@ -76,6 +80,9 @@ languages:
         - name: Tarifs
           weight: 35
           url: /fr/#tarification
+        - name: Documentation
+          weight: 26
+          url: 'https://wallabag-it.zammad.com/help/'
 
 markup:
   goldmark:
